--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.3",
+    "uuid": "^9.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
